--- a/src/components/page-issuances/page-issuances.less
+++ b/src/components/page-issuances/page-issuances.less
@@ -24,7 +24,7 @@ page-issuances {
   }
 
   @media (max-width: @screen-xs) {
-    grid component {
+    grid-component {
       height: initial;
       .grid-responsive {
         height: initial;
